// Copyright 2025 Fraunhofer AISEC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package confirmate.assessment.v1;

import "api/assessment/metric.proto";
import "api/evidence/evidence.proto";
import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "tagger/tagger.proto";
import "api/assessment/result.proto";

option go_package = "confirmate.io/core/api/assessment";

// Representing the link between orchestrator and discovery: Assessing evidences
// from discovery and sending results to orchestrator
service Assessment {
  // Triggers the compliance calculation. Part of the private API. Not exposed
  // as REST.
  rpc CalculateCompliance(CalculateComplianceRequest) returns (google.protobuf.Empty) {}

  // Assesses the evidence sent by the discovery. Part of the public API, also
  // exposed as REST.
  rpc AssessEvidence(AssessEvidenceRequest) returns (AssessEvidenceResponse) {
    option (google.api.http) = {
      post: "/v1/assessment/evidences"
      body: "evidence"
    };
  }

  // Assesses stream of evidences sent by the discovery and returns a response
  // stream. Part of the public API. Not exposed as REST.
  rpc AssessEvidences(stream AssessEvidenceRequest) returns (stream AssessEvidencesResponse) {}
}

message ConfigureAssessmentRequest {}
message ConfigureAssessmentResponse {}

message CalculateComplianceRequest {
  string control_id = 1;
}

message AssessEvidenceRequest {
  confirmate.evidence.v1.Evidence evidence = 1 [(buf.validate.field).required = true];
}

// AssessEvidenceResponse belongs to AssessEvidence, which uses a custom unary
// RPC and therefore requires a response message according to the style
// convention. Since no return values are required, this is empty.
message AssessEvidenceResponse {
  AssessmentStatus status = 1;
}

// AssessEvidencesResponse belongs to AssessEvidences, which uses a custom
// bidirectional streaming RPC and therefore requires a response message
// according to the style convention. The bidirectional streaming needs the
// status and its message in the response for error handling.
message AssessEvidencesResponse {
  AssessmentStatus status = 1;

  string status_message = 2;
}