// Copyright 2016-2025 Fraunhofer AISEC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package confirmate.evidence.v1;

import "policies/security-metrics/ontology/1.0/ontology.proto";
import "buf/validate/validate.proto";
import "google/api/field_behavior.proto";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "tagger/tagger.proto";

option go_package = "confirmate.io/core/api/evidence";

// An evidence resource
message Evidence {
  // the ID in a uuid format
  string id = 1 [(buf.validate.field).string.uuid = true];

  // time of evidence creation
  google.protobuf.Timestamp timestamp = 2 [
    (tagger.tags) = "gorm:\"serializer:timestamppb;type:timestamp\"",
    (buf.validate.field).required = true
  ];

  // Reference to a target of evaluation (e.g., service, organization) this evidence was gathered from
  string target_of_evaluation_id = 3 [(buf.validate.field).string.uuid = true];

  // Reference to the tool which provided the evidence
  string tool_id = 4 [(buf.validate.field).string.min_len = 1];

  // Semantic representation of the Cloud resource according to our defined ontology
  Resource resource = 6 [(tagger.tags) = "gorm:\"serializer:json\""];

  // Very experimental property. Use at own risk. This property will be deleted again.
  //
  // Related resource IDs. The assessment will wait until all evidences for related resource have arrived in the
  // assessment and are recent enough. In the future, this will be replaced with information in the "related" edges in
  // the resource. For now, this needs to be set manually in the evidence.
  repeated string experimental_related_resource_ids = 999 [(tagger.tags) = "gorm:\"serializer:json\""];
}

// Resource is a wrapper around google.protobuf.Value that is needed for
// persistence reasons.
message Resource {
  // Id contains a unique ID for each resource. This is specific for the cloud
  // provider this resource was gathered for and can for example be a resource
  // URL.
  string id = 1 [
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
  // TargetOfEvaluationId is the UUID for the target of evaluation to which this resource
  // belongs to.
  string target_of_evaluation_id = 2 [
    (buf.validate.field).string.uuid = true,
    (google.api.field_behavior) = REQUIRED
  ];
  // ResourceType contains a comma separated string of resource types according
  // to our ontology.
  string resource_type = 3 [
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
  // Reference to the tool which provided the resource
  string tool_id = 4 [
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];

  // Properties contains a protobuf message that describe the resource in the
  // terms of our ontology.
  google.protobuf.Any properties = 10 [
    (tagger.tags) = "gorm:\"serializer:anypb;type:json\"",
    (buf.validate.field).required = true,
    (google.api.field_behavior) = REQUIRED
  ];
}

// Maps cloud resources and its properties to the format of the
// ontology
service Resources {
  // UpdateResource updates a resource (or creates it, if it does not exist).
  // This is used to give third-party tools the possibility to add something to
  // the resource graph.
  rpc UpdateResource(UpdateResourceRequest) returns (confirmate.evidence.v1.Resource) {
    option (google.api.http) = {
      post: "/v1/evidence_store/resources/{resource.id}"
      body: "*"
    };
  }

  // ListGraphEdges returns the edges (relationship) between resources in our
  // resource graph.
  rpc ListGraphEdges(ListGraphEdgesRequest) returns (ListGraphEdgesResponse) {
    option (google.api.http) = {get: "/v1/evidence/graph/edges"};
  }
}

message UpdateResourceRequest {
  confirmate.evidence.v1.Resource resource = 1 [(google.api.field_behavior) = REQUIRED];
}

message ListGraphEdgesRequest {
  int32 page_size = 10;
  string page_token = 11;
  string order_by = 12;
  bool asc = 13;
}

message ListGraphEdgesResponse {
  repeated GraphEdge edges = 1 [(google.api.field_behavior) = REQUIRED];
  string next_page_token = 2;
}

message GraphEdge {
  string id = 1 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string.min_len = 1
  ];
  string source = 2 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string.min_len = 1
  ];
  string target = 3 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string.min_len = 1
  ];
  string type = 4 [(google.api.field_behavior) = REQUIRED];
}